--- a/Client/facebookclone/src/pages/MessagesPage/index.css
+++ b/Client/facebookclone/src/pages/MessagesPage/index.css
@@ -58,6 +58,14 @@
   width: 90%;
 }
 
+.MessagesPageContainer .MessagesPageContainer__searchBar .MessagesPageContainer__searchBar__searchBarContainer .MessagesPageContainer__searchBar__searchBarContainer__form .MessagesPageContainer__searchBar__searchBarContainer__form__input > label {
+  font-size: 14px;
+}
+
+.MessagesPageContainer .MessagesPageContainer__searchBar .MessagesPageContainer__searchBar__searchBarContainer .MessagesPageContainer__searchBar__searchBarContainer__form .MessagesPageContainer__searchBar__searchBarContainer__form__input > div > input {
+  font-size: 14px;
+}
+
 .MessagesPageContainer .MessagesPageContainer__searchBar .MessagesPageContainer__searchBar__searchBarContainer .MessagesPageContainer__searchBar__searchBarContainer__form .MessagesPageContainer__searchBar__searchBarContainer__form__input > .MuiInputBase-input {
   color: aliceblue;
 }
@@ -400,8 +408,9 @@
   font-size: 20px;
 }
 
-.MessagesPageContainer .MessagesPageContainer__individualMessages .MessagesPageContainer__individualMessages__bottomBar .MessagesPageContainer__individualMessages__bottomBar__inputHolder .MessagesPageContainer__individualMessages__bottomBar__inputHolder__input > div > .MuiFilledInput-inputMultiline {
+.MessagesPageContainer .MessagesPageContainer__individualMessages .MessagesPageContainer__individualMessages__bottomBar .MessagesPageContainer__individualMessages__bottomBar__inputHolder .MessagesPageContainer__individualMessages__bottomBar__inputHolder__input > .MuiFilledInput-multiline > textarea {
   color: aliceblue;
+  font-size: 22px;
 }
 
 .MessagesPageContainer .MessagesPageContainer__individualMessages .MessagesPageContainer__individualMessages__bottomBar .MessagesPageContainer__individualMessages__bottomBar__sendButtonContainer {
