--- a/Client/facebookclone/src/sass/base/_typography.scss
+++ b/Client/facebookclone/src/sass/base/_typography.scss
@@ -1,53 +1,49 @@
 body {
-    font-family: 'Lato', 'sans-serif';
-    font-weight: 400;
-    line-height: 1.7;
-    background-color: $color-grey-light-2;
-
+  // font-family: 'Lato', 'sans-serif';
+  // font-weight: 400;
+  // line-height: 1.7;
+  // background-color: $color-grey-light-2;
 }
 
 .profilename {
+  color: $color-black;
+  font-size: 2rem;
+  font-weight: 600;
+  &--1 {
+    font-size: 1.5rem;
     color: $color-black;
-    font-size: 2rem;
-    font-weight:600;
-    &--1{
-        font-size: 1.5rem;
-        color: $color-black;
-        font-weight:550;
-        margin-left: 1rem;;
-    }
+    font-weight: 550;
+    margin-left: 1rem;
+  }
 }
 
-.post__title{
-    font-size: 2rem;
-    color: $color-black;
+.post__title {
+  font-size: 2rem;
+  color: $color-black;
 }
 .like__anchor,
 .comment__anchor {
-    text-decoration: none;
-    color: $color-grey-dark;
-    font-size: 2rem;
-    
+  text-decoration: none;
+  color: $color-grey-dark;
+  font-size: 2rem;
 }
-.post__likes{
-    
-    font-size: 1.4rem;
-    float: left;
+.post__likes {
+  font-size: 1.4rem;
+  float: left;
 }
 
-.post__comments{
-    font-size: 1.4rem;
-    float:right;
+.post__comments {
+  font-size: 1.4rem;
+  float: right;
 }
 
-.create-post__postanchor{
-    text-decoration: none;
-    color: $color-white;
-
+.create-post__postanchor {
+  text-decoration: none;
+  color: $color-white;
 }
-.header{
-    text-align: center;
-    font-size:1.5rem;
-    border-bottom: 1px solid $color-grey-light-2;
-    margin:1rem;
+.header {
+  text-align: center;
+  font-size: 1.5rem;
+  border-bottom: 1px solid $color-grey-light-2;
+  margin: 1rem;
 }
