--- a/Client/facebookclone/src/sass/main.scss
+++ b/Client/facebookclone/src/sass/main.scss
@@ -11,11 +11,13 @@
 @import "components/login";
 @import "components/signup";
 @import "components/profile.scss";
+@import "components/home";
 
 @import "layout/post";
 @import "layout/grid";
 @import "layout/comment";
 @import "layout/create-post";
+@import "layout/seeContact";
 
 @import "pages/homePage";
 @import "pages/navbar";
