--- a/Client/facebookclone/src/css/style.css
+++ b/Client/facebookclone/src/css/style.css
@@ -12,7 +12,7 @@ body {
   box-sizing: border-box; }
 
 body {
-  font-family: 'Lato', 'sans-serif';
+  font-family: 'inherit';
   font-weight: 400;
   line-height: 1.7;
   background-color: #eee; }
@@ -216,12 +216,14 @@ body {
       position: sticky;
       -webkit-position: sticky;
       top: 0; }
+    .profile_information__posts {
+      margin-left: -4rem; }
   .profile_row {
     display: flex;
     justify-content: center; }
   .profile__cover {
     border-radius: 1.2rem;
-    width: 80%;
+    width: 95rem;
     height: 39rem;
     margin: 0 auto; }
     .profile__cover-1 {
@@ -237,6 +239,7 @@ body {
     margin-top: -5rem;
     padding: 0.5rem;
     background-color: #fff;
+    box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
     backface-visibility: hidden; }
   .profile__photos {
     width: 9rem;
@@ -276,15 +279,83 @@ body {
     margin: 1rem;
     height: auto;
     padding: 1rem;
-    border-radius: 2rem;
+    border-radius: 1rem;
     box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2); }
+
+.home {
+  width: 100%;
+  display: flex;
+  -webkit-display: flex;
+  position: relative;
+  justify-content: space-between; }
+  .home_1 {
+    width: 20%;
+    height: 100%;
+    position: fixed;
+    left: 0; }
+  .home_left {
+    padding: 2px; }
+  .home_left:hover {
+    position: fixed;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    position: sticky;
+    -webkit-position: sticky; }
+    .home_left:hover::-webkit-scrollbar {
+      width: 8px;
+      border-radius: 8px;
+      background-color: #eee; }
+    .home_left:hover::-webkit-scrollbar-thumb {
+      background-color: #eee;
+      width: 8px;
+      background-color: #eee;
+      border-radius: 25px; }
+    .home_left:hover:hover::-webkit-scrollbar {
+      width: 8px;
+      background-color: #eee; }
+    .home_left:hover:hover::-webkit-scrollbar-thumb {
+      background-color: grey;
+      width: 8px; }
+  .home_2 {
+    width: 50%;
+    padding-left: 33%; }
+  .home_middle {
+    place-items: center; }
+  .home_3 {
+    width: 19%;
+    position: fixed;
+    right: 0;
+    margin: 2rem; }
+  .home_right:hover {
+    width: 100%;
+    height: 100vh;
+    overflow-y: scroll;
+    overflow-x: hidden; }
+    .home_right:hover::-webkit-scrollbar {
+      width: 8px;
+      border-radius: 8px;
+      background-color: #eee; }
+    .home_right:hover::-webkit-scrollbar-thumb {
+      background-color: #eee;
+      width: 8px;
+      background-color: #eee;
+      border-radius: 25px; }
+    .home_right:hover:hover::-webkit-scrollbar {
+      width: 8px;
+      background-color: #eee; }
+    .home_right:hover:hover::-webkit-scrollbar-thumb {
+      background-color: grey;
+      width: 8px; }
 
 .post {
   background-color: #fff;
   height: auto;
   width: 50rem;
   padding: 1.5rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
   position: relative;
   margin: 2rem; }
@@ -318,16 +389,13 @@ body {
   .post__time {
     color: #000;
     font-size: 1.2rem;
-    margin-left: .5rem; }
+    margin-left: 0.5rem; }
   .post__postimage {
     height: 38rem;
     margin-left: -1.5rem; }
     .post__postimage--1 {
       width: 50rem;
       background-size: cover; }
-
-span {
-  padding-left: .4rem; }
 
 .like,
 .comment {
@@ -415,6 +483,26 @@ span {
     font-weight: 500;
     margin: 0 3rem;
     border-radius: .5rem; }
+
+.contact {
+  height: 5rem;
+  width: 100%;
+  display: flex;
+  background-color: none;
+  align-items: center;
+  border-radius: 5px;
+  padding-left: 1rem; }
+  .contact__image {
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    box-shadow: 0 0.5rem 0.5rem rgba(247, 247, 247, 0.2); }
+  .contact__name {
+    margin-left: 1rem;
+    font-size: 1.6rem;
+    font-weight: bold; }
+  .contact:hover {
+    background-color: #f7f7f7; }
 
 .navbar_1 {
   background-color: #fff;
