--- a/Client/facebookclone/src/sass/base/_typography.scss
+++ b/Client/facebookclone/src/sass/base/_typography.scss
@@ -1,8 +1,8 @@
 body {
-  // font-family: 'Lato', 'sans-serif';
-  // font-weight: 400;
-  // line-height: 1.7;
-  // background-color: $color-grey-light-2;
+  font-family: 'inherit';
+  font-weight: 400;
+  line-height: 1.7;
+  background-color: $color-grey-light-2;
 }
 
 .profilename {
