--- a/Client/facebookclone/src/sass/components/_profile.scss
+++ b/Client/facebookclone/src/sass/components/_profile.scss
@@ -25,6 +25,9 @@
       -webkit-position: sticky;
       top: 0;
     }
+    &__posts {
+      margin-left:-4rem;
+    }
     
   }
   &_row{
@@ -35,7 +38,7 @@
 
   &__cover {
     border-radius: 1.2rem;
-    width: 60%;
+    width:95rem;
     height: 39rem;
     margin: 0 auto;
   
@@ -57,6 +60,7 @@
     margin-top: -5rem;
     padding: 0.5rem;
     background-color: $color-white;
+    box-shadow: 0 0.5rem 0.5rem rgba($color-black, 0.2);
     backface-visibility: hidden;
 
     // &::after{
@@ -118,7 +122,7 @@
     margin:1rem;
     height:auto;
     padding:1rem;
-    border-radius: 2rem;
+    border-radius: 1rem;
     box-shadow: 0 0.5rem 0.5rem rgba($color-black, 0.2);
 }
 }
