--- a/Client/facebookclone/src/sass/components/_home.scss
+++ b/Client/facebookclone/src/sass/components/_home.scss
@@ -59,7 +59,7 @@
     
     &_2{
         width:50%;
-        padding-left:33%;
+        margin-left:33%;
     }
     &_middle{
         place-items: center;
