--- a/Client/facebookclone/src/sass/layout/_create-post.scss
+++ b/Client/facebookclone/src/sass/layout/_create-post.scss
@@ -1,10 +1,14 @@
 .create-post{
     padding:5px;
     height:auto;
-    width:60rem;
+    width:40rem;
     border-radius:.5rem;
     background-color: $color-white;
     box-shadow: 0 0.5rem 0.5rem rgba($color-black, 0.2);
+    position: absolute;
+    top:10rem;
+    left:38%;
+    z-index:1;
     &__seen{
         width:4rem;
         display:inline-block;
@@ -20,21 +24,40 @@
     &__textarea{
         display:block;
         margin:1rem;
-        width:58rem;
+        width:38rem;
         outline:none;
-        background-color: $color-grey-light-2;
+        background-color: $color-white;
         border:none;
         font-size:2rem;
-        height: auto;
+        height: 40px;
 
     }
     &__add-photo{
-        width:54rem;
+        width:35rem;
         height:5rem;
         border: 1px solid black;
         font-size:2rem;
         font-weight:500;
-        margin:0 3rem;
+        margin:0 auto;
         border-radius:.5rem;
+    }
+    &__post{
+        margin:1rem auto;
+    }
+}
+
+.header{
+    display:flex;
+    place-items:center;
+    justify-content:space-between;
+    &__title{
+        margin-left: 13rem;
+    }
+    &__right{
+        font-size:3rem;
+        background-image: linear-gradient(to right, $color-black, $color-black);
+        -webkit-background-clip: text;
+        color: transparent;
+        cursor: pointer;
     }
 }
